Fix top spacing

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ html {
 
 body {
 	padding: 20px;
-	padding-top: 45px;
+	padding-top: 53px;
 
 	color: white;
 }
